--- a/Rkeeper/Styles/LoginRegisterStyles/PswdBoxStyle.xaml
+++ b/Rkeeper/Styles/LoginRegisterStyles/PswdBoxStyle.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="pswdStyle" TargetType="PasswordBox">
-        <Setter Property="Margin" Value="20"/>
+
+        <Setter Property="Padding" Value="5,0"/>
 
         <Setter Property="Margin" Value="20"/>
 
@@ -23,12 +24,16 @@
 
             <Setter.Value>
 
-                <ControlTemplate>
+                <ControlTemplate TargetType="PasswordBox">
 
                     <Border Name="Border" Background="White" BorderBrush="#484bf2" BorderThickness="1" CornerRadius="3">
+                        <Grid>
 
-                        <ScrollViewer x:Name="PART_ContentHost" Focusable="false" />
+                            <ScrollViewer x:Name="PART_ContentHost" Focusable="false" />
 
+                            <TextBlock x:Name="PlaceHolder" Foreground="Gray" Text="{TemplateBinding Name}" FontSize="{TemplateBinding FontSize}" FontStyle="Italic" FontFamily="{TemplateBinding FontFamily}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Margin="{TemplateBinding Padding}" Visibility="Visible"/>
+
+                        </Grid>
                     </Border>
 
                     <ControlTemplate.Triggers>
