--- a/Rkeeper/Styles/LoginRegisterStyles/TxtBoxStyle.xaml
+++ b/Rkeeper/Styles/LoginRegisterStyles/TxtBoxStyle.xaml
@@ -1,6 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="txtStyle" TargetType="TextBox">
+
+        <Setter Property="Padding" Value="5,0"/>
 
         <Setter Property="Margin" Value="20"/>
 
@@ -22,12 +24,17 @@
 
             <Setter.Value>
 
-                <ControlTemplate>
+                <ControlTemplate TargetType="TextBox">
 
                     <Border Name="Border" Background="White" BorderBrush="#484bf2" BorderThickness="1" CornerRadius="3">
-                        
-                        <ScrollViewer x:Name="PART_ContentHost" Focusable="false" />
+                        <Grid>
 
+                            <ScrollViewer x:Name="PART_ContentHost" Focusable="false" />
+
+
+                            <TextBlock x:Name="PlaceHolder" Foreground="Gray" Text="{TemplateBinding Name}" FontSize="{TemplateBinding FontSize}" FontStyle="Italic" FontFamily="{TemplateBinding FontFamily}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Margin="{TemplateBinding Padding}" Visibility="Collapsed"/>
+
+                        </Grid>
                     </Border>
 
                     <ControlTemplate.Triggers>
@@ -126,15 +133,30 @@
 
                         </Trigger>
 
+                        <MultiTrigger>
+
+                            <MultiTrigger.Conditions>
+
+                                <Condition Property="Text" Value=""/>
+
+                            </MultiTrigger.Conditions>
+
+                            <Setter Property="Visibility" TargetName="PlaceHolder" Value="Visible"/>
+
+                        </MultiTrigger>
 
                         <Trigger Property="IsFocused" Value="True">
 
                             <Setter Property="BorderBrush" TargetName="Border" Value="#484bf2"/>
 
                             <Setter Property="Effect">
+
                                 <Setter.Value>
+
                                     <DropShadowEffect Color="#484bf2" ShadowDepth="10" BlurRadius="10" Opacity="0.8"/>
+
                                 </Setter.Value>
+
                             </Setter>
 
                             <Trigger.EnterActions>
