--- a/Rkeeper/View/LoginRegisterView/LoginPage.xaml
+++ b/Rkeeper/View/LoginRegisterView/LoginPage.xaml
@@ -35,9 +35,9 @@
 
             <TextBlock Text="LOGIN" Foreground="LightSalmon" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="50"/>
 
-            <TextBox Grid.Row="1" Style="{StaticResource txtStyle}"/>
+            <TextBox Name="Username" Grid.Row="1"  Style="{StaticResource txtStyle}"/>
 
-            <PasswordBox Grid.Row="2" Style="{StaticResource pswdStyle}"/>
+            <PasswordBox x:Name="Password" Grid.Row="2" Style="{StaticResource pswdStyle}" PreviewKeyDown="Password_PreviewKeyDown"/>
 
             <Grid Grid.Row="3" Margin="0,20">
 
