--- a/Rkeeper/View/LoginRegisterView/RegisterPage.xaml
+++ b/Rkeeper/View/LoginRegisterView/RegisterPage.xaml
@@ -6,7 +6,8 @@
       xmlns:local="clr-namespace:Rkeeper.View.LoginRegisterView"
       mc:Ignorable="d" 
       d:DesignHeight="550" d:DesignWidth="800"
-      Title="RegisterPage">
+      Title="RegisterPage"
+      Style="{StaticResource Page_Style}">
     <Grid>
 
         <Grid.ColumnDefinitions>
@@ -34,9 +35,9 @@
 
             <TextBlock Text="REGISTER" Foreground="#484bf2" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="50"/>
 
-            <TextBox Grid.Row="1" Style="{StaticResource txtStyle}"/>
+            <TextBox x:Name="Username" Grid.Row="1" Style="{StaticResource txtStyle}"/>
 
-            <PasswordBox Grid.Row="2" Style="{StaticResource pswdStyle}"/>
+            <PasswordBox x:Name="Password" Grid.Row="2" Style="{StaticResource pswdStyle}" PreviewKeyDown="Password_PreviewKeyDown"/>
 
             <Grid Grid.Row="3" Margin="0,20">
 
