Add table tableinfo views

--- a/Rkeeper/Styles/LoginRegisterStyles/AdditionalBtnStyleLoginRegister.xaml
+++ b/Rkeeper/Styles/LoginRegisterStyles/AdditionalBtnStyleLoginRegister.xaml
@@ -12,6 +12,8 @@
 
         <Setter Property="Margin" Value="2,7"/>
 
+        <Setter Property="Cursor" Value="Hand"/>
+
         <Setter Property="Template">
             
             <Setter.Value>
