--- a/Rkeeper/Styles/LoginRegisterStyles/LoginRegisterButtonStyle.xaml
+++ b/Rkeeper/Styles/LoginRegisterStyles/LoginRegisterButtonStyle.xaml
@@ -11,6 +11,8 @@
 
         <Setter Property="Padding" Value="0,0,0,10"/>
 
+        <Setter Property="Cursor" Value="Hand"/>
+        
         <Setter Property="Effect">
 
             <Setter.Value>
