--- a/Rkeeper/View/MainWindowComponentsView/BillView.xaml
+++ b/Rkeeper/View/MainWindowComponentsView/BillView.xaml
@@ -5,8 +5,30 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Rkeeper.View.MainWindowComponentsView"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="550" d:DesignWidth="800">
     <Grid>
-            
+        <Grid.RowDefinitions>
+            <RowDefinition Height="5*"/>
+            <RowDefinition Height="0.5*"/>
+        </Grid.RowDefinitions>
+        <ListView ItemsSource="{Binding OrderedFood}" FontSize="20" SelectionMode="Single" HorizontalAlignment="Center">
+            <ListView.View>
+                <GridView>
+                    <GridView.Columns>
+                        <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" Width="220"/>
+                        <GridViewColumn Header="Price" DisplayMemberBinding="{Binding Price}" Width="100"/>
+                        <GridViewColumn Header="Count" DisplayMemberBinding="{Binding Count}"  Width="100"/>
+                    </GridView.Columns>
+                </GridView>
+            </ListView.View>
+        </ListView>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="0"  Height="40" Width="200" HorizontalAlignment="Right" Margin="40,0" Content="C l o s e  T a b l e" FontSize="20" FontWeight="Bold" Command="{Binding CloseTableCommand}"/>
+            <Button Grid.Column="1"  Height="40" Width="200" HorizontalAlignment="Left" Margin="40,0" Content="B a c k" FontSize="20" FontWeight="Bold" Command="{Binding BackCommand}"/>
+        </Grid>
     </Grid>
 </UserControl>
