--- a/Rkeeper/View/LoginRegisterView/LoginPage.xaml
+++ b/Rkeeper/View/LoginRegisterView/LoginPage.xaml
@@ -38,7 +38,7 @@
 
             <TextBox Name="Username" Grid.Row="1"  Style="{StaticResource txtStyle}"/>
 
-            <PasswordBox x:Name="Password" Grid.Row="2" Style="{StaticResource pswdStyle}" PreviewKeyDown="Password_PreviewKeyDown"/>
+            <PasswordBox x:Name="Password" Grid.Row="2" Style="{StaticResource pswdStyle}" PasswordChanged="Password_PasswordChanged"/>
 
             <Grid Grid.Row="3" Margin="0,20">
 
