--- a/Rkeeper/View/Admin/MenuFoodView.xaml
+++ b/Rkeeper/View/Admin/MenuFoodView.xaml
@@ -3,15 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-             xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
              xmlns:local="clr-namespace:Rkeeper.View.Admin"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="1.5*"/>
         </Grid.ColumnDefinitions>
         <Grid Grid.Column="0">
             <Grid.RowDefinitions>
@@ -23,11 +21,18 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <TextBlock Text="Add Food To Menu" HorizontalAlignment="Center" VerticalAlignment="Center"  FontSize="24" FontWeight="Black"/>
-            <TextBox Name="FoodName" Grid.Row="1" Style="{StaticResource txtStyle}"/>
-            <TextBox Name="ImageLocation" Grid.Row="2" Style="{StaticResource txtStyle}"/>
-            <TextBox Name="Price" Grid.Row="3" Style="{StaticResource txtStyle}"/>
-            <TextBox Name="Count" Grid.Row="4" Style="{StaticResource txtStyle}"/>
-            <Button Grid.Row="5" Content="Add"/>
+            <TextBox Name="FoodName" Grid.Row="1" Style="{StaticResource txtStyle}" Text="{Binding FoodName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBox Name="ImageLocation" Grid.Row="2" Style="{StaticResource txtStyle}" Text="{Binding ImageLocation, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBox Name="Price" Grid.Row="3" Style="{StaticResource txtStyle}" Text="{Binding Price, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBox Name="Count" Grid.Row="4" Style="{StaticResource txtStyle}" Text="{Binding Count, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <Grid Grid.Row="5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Button Grid.Column="0" Content="A d d" HorizontalAlignment="Right" Margin="0,0,10,0" Height="40" Width="130" FontSize="24" FontWeight="Bold" Command="{Binding AddCommand}"/>
+                <Button Grid.Column="1" Content="B a c k" HorizontalAlignment="Left" Margin="10,0,0,0" Height="40" Width="130" FontSize="24" FontWeight="Bold" Command="{Binding BackCommand}"/>
+            </Grid>
         </Grid>
         <Grid Grid.Column="1">
             <ListView ItemsSource="{Binding MenuFood}" ScrollViewer.VerticalScrollBarVisibility="Visible"  Grid.Row="1">
@@ -38,19 +43,19 @@
                 </ListView.ItemsPanel>
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <Grid Height="auto" Width="100">
+                        <Grid Height="auto" Width="440">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="1.5*"/>
                                 <ColumnDefinition Width="2.5*"/>
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="1.3*"/>
                             </Grid.ColumnDefinitions>
                             <Image Source="{Binding ImageSource}"/>
-                            <TextBlock Grid.Column="1" Text="{Binding Name}" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="18" FontWeight="Bold"/>
-                            <TextBlock Grid.Column="2" Text="{Binding Price}" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="18" FontWeight="Bold"/>
-                            <TextBlock Grid.Column="3" Text="1" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="18" FontWeight="Bold" Width="25" />
-                            <Button Grid.Column="4" Content="Order" Height="60"  FontSize="18" FontWeight="Bold" Command="{Binding DataContext.AddListCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" CommandParameter="{Binding Name}"/>
+                            <TextBlock Grid.Column="1" Text="{Binding Name}" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="14" FontWeight="Bold"/>
+                            <TextBlock Grid.Column="2" Text="{Binding Price}" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="14" FontWeight="Bold"/>
+                            <TextBlock Grid.Column="3" Text="1" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="14" FontWeight="Bold" Width="25" />
+                            <Button Grid.Column="4" Content="Remove" Height="30"  FontSize="14" FontWeight="Bold" Command="{Binding DataContext.RemoveMenuCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" CommandParameter="{Binding Name}"/>
                         </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
