--- a/Rkeeper/View/Admin/LogfileView.xaml
+++ b/Rkeeper/View/Admin/LogfileView.xaml
@@ -7,6 +7,10 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock Text="LigFile" FontSize="50"/>
+        
+        <ScrollViewer VerticalScrollBarVisibility="Auto"  HorizontalScrollBarVisibility="Auto">
+            <TextBox Text="{Binding LogFileString}" IsReadOnly="True" FontSize="20" Margin="0,40" Background="Black" Foreground="White" />
+        </ScrollViewer>
+        <Button HorizontalAlignment="Right" VerticalAlignment="Bottom" Content="Back" Height="40" Width="150" Command="{Binding BackCommand}"/>
     </Grid>
 </UserControl>
