--- a/Rkeeper/View/MainWindowComponentsView/TableView.xaml
+++ b/Rkeeper/View/MainWindowComponentsView/TableView.xaml
@@ -42,24 +42,39 @@
             <Button Grid.Row="1" Margin="20,10" FontSize="28" Height="50" Content="B i l l" FontWeight="Bold" Command="{Binding BillCommand}"/>
 
         </Grid>
-
-        <ScrollViewer Grid.Column="1">
-            <WrapPanel HorizontalAlignment="Center">
-                <WrapPanel.Resources>
-                    <Style TargetType="Button">
-                        <Setter Property="Width" Value="200"/>
-                        <Setter Property="Height" Value="150"/>
-                        <Setter Property="Margin" Value="20,10"/>
-                        <Setter Property="FontSize" Value="25"/>
-                    </Style>
-                </WrapPanel.Resources>
-                <Button Name="Table1"  Content="{Binding ElementName=Table1 ,Path=Name}" Command="{Binding TableCommand}" CommandParameter="{Binding ElementName=Table1}"/>
-                <Button Name="Table2"  Content="{Binding ElementName=Table2 ,Path=Name}" Command="{Binding TableCommand}" CommandParameter="{Binding ElementName=Table2}"/>
-                <Button Name="Table3"  Content="{Binding ElementName=Table3 ,Path=Name}" Command="{Binding TableCommand}" CommandParameter="{Binding ElementName=Table3}"/>
-                <Button Name="Table4"  Content="{Binding ElementName=Table4 ,Path=Name}" Command="{Binding TableCommand}" CommandParameter="{Binding ElementName=Table4}"/>
-                <Button Name="Table5"  Content="{Binding ElementName=Table5 ,Path=Name}" Command="{Binding TableCommand}" CommandParameter="{Binding ElementName=Table5}"/>
-                <Button Name="Table6"  Content="{Binding ElementName=Table6 ,Path=Name}" Command="{Binding TableCommand}" CommandParameter="{Binding ElementName=Table6}"/>
-            </WrapPanel>
-        </ScrollViewer>
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="35"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" Text="{Binding Username}"/>
+                <TextBlock Grid.Column="1" Text="{Binding Time}" HorizontalAlignment="Right"/>
+                <Button Grid.Column="2" Margin="20,2" Content="Logout" FontSize="18" FontWeight="Black" Command="{Binding LogoutCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}}, Mode=OneTime}"/>
+            </Grid>
+            <ScrollViewer Grid.Row="1">
+                <WrapPanel HorizontalAlignment="Center">
+                    <WrapPanel.Resources>
+                        <Style TargetType="Button">
+                            <Setter Property="Width" Value="200"/>
+                            <Setter Property="Height" Value="150"/>
+                            <Setter Property="Margin" Value="20,10"/>
+                            <Setter Property="FontSize" Value="25"/>
+                        </Style>
+                    </WrapPanel.Resources>
+                    <Button Name="Table1"  Content="{Binding ElementName=Table1 ,Path=Name}" Command="{Binding TableCommand}" CommandParameter="{Binding ElementName=Table1}"/>
+                    <Button Name="Table2"  Content="{Binding ElementName=Table2 ,Path=Name}" Command="{Binding TableCommand}" CommandParameter="{Binding ElementName=Table2}"/>
+                    <Button Name="Table3"  Content="{Binding ElementName=Table3 ,Path=Name}" Command="{Binding TableCommand}" CommandParameter="{Binding ElementName=Table3}"/>
+                    <Button Name="Table4"  Content="{Binding ElementName=Table4 ,Path=Name}" Command="{Binding TableCommand}" CommandParameter="{Binding ElementName=Table4}"/>
+                    <Button Name="Table5"  Content="{Binding ElementName=Table5 ,Path=Name}" Command="{Binding TableCommand}" CommandParameter="{Binding ElementName=Table5}"/>
+                    <Button Name="Table6"  Content="{Binding ElementName=Table6 ,Path=Name}" Command="{Binding TableCommand}" CommandParameter="{Binding ElementName=Table6}"/>
+                </WrapPanel>
+            </ScrollViewer>
+        </Grid>
     </Grid>
 </UserControl>
