Add view model and view login register

--- a/Rkeeper/App.xaml
+++ b/Rkeeper/App.xaml
@@ -14,7 +14,7 @@
                 
                 <ResourceDictionary Source="Styles/WindowStyle.xaml"/>
 
-                <ResourceDictionary Source="Styles/PageStyle.xaml"/>
+                <ResourceDictionary Source="Styles/UserControlStyle.xaml"/>
 
                 <ResourceDictionary Source="Styles/LoginRegisterStyles/TxtBoxStyle.xaml"/>
                 
