--- a/Rkeeper/View/LoginRegisterView/RegisterView.xaml
+++ b/Rkeeper/View/LoginRegisterView/RegisterView.xaml
@@ -1,13 +1,13 @@
-﻿<Page x:Class="Rkeeper.View.LoginRegisterView.RegisterPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Rkeeper.View.LoginRegisterView"
-      mc:Ignorable="d" 
-      d:DesignHeight="550" d:DesignWidth="800"
-      Title="RegisterPage"
-      Style="{StaticResource Page_Style}">
+﻿<UserControl x:Class="Rkeeper.View.LoginRegisterView.RegisterView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:Rkeeper.View.LoginRegisterView"
+             mc:Ignorable="d" 
+             d:DesignHeight="550" d:DesignWidth="800"
+             Style="{StaticResource UserControlStyle}">
+    
     <Grid>
 
         <Grid.ColumnDefinitions>
@@ -50,7 +50,7 @@
 
                 <TextBlock Grid.Column="0" Text="Have an account?" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="16"/>
 
-                <Button Name="AdditionalLoginBtn" Grid.Column="1" Style="{StaticResource AdditionalBtnStyle}">
+                <Button Name="AdditionalLoginBtn" Grid.Column="1" Style="{StaticResource AdditionalBtnStyle}" Command="{Binding NavigateLoginCommand}">
 
                     <TextBlock Text="Login" TextDecorations="Underline"/>
 
@@ -62,4 +62,4 @@
 
     </Grid>
 
-</Page>
+</UserControl>
